--- a/index.html
+++ b/index.html
@@ -1,10 +1,346 @@
-<script src="https://d3js.org/d3.v6.min.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
+<p id="p1">
+I. These are the circles, try to click on them!
+</p>
 
 <script>
-  console.log(d3); // test if d3 is loaded
-  // Add an SVG
-  // Add Rectangles
-  // Add Circles
-  // Add Lines
-  // Add Polygons
+d3.selectAll('#p1')
+    .style('color', '#F28308');
 </script>
+
+<svg id="map1" width=300 height=350>
+</svg>
+
+<script>
+var dataset = [10,15,20];
+
+var linscale = d3.scaleLinear()
+	.domain([0, 50]) // unit: km
+	.range([0, 100]) // unit: pixels
+
+var sel = d3.select('#map1')
+	.selectAll('#map1')
+	.data(dataset)
+	.enter().append('circle')
+	.attr('cx', function(d) { return linscale(d); })
+	.attr('cy', function(d) { return linscale(d); })
+	.attr('r', 5)
+	.attr('id', function(d, i) { return 'rect'+i; })
+	//move
+	.on('click', function(event) {
+		d3.select(this)
+		.transition()
+		.duration(5000)
+		.ease(d3.easeCircle)
+		.attr('cx', function(d) { return linscale(d) + 120; })
+		.attr('cy', function(d) { return linscale(d) + 230; })
+		.attr('r', function(d) { return linscale(d) + 7; })
+		.attr('fill', '	#FFD900');
+    	})
+</script>
+
+
+<p id="p2">
+II. These are the rectangles, try to move your mouse on the outermost rectangle.
+</p>
+
+<script>
+d3.selectAll('#p2')
+    .style('color', '#006400');
+</script>
+
+
+<svg id="map2" width=250 height=280>
+</svg>
+
+
+<script>
+var dataset = [0, 25, 50, 75, 100];
+
+d3.selectAll('#map2')
+	.attr("fill","#DEFADE")	
+	.append('rect')
+	.attr('x', dataset[0])
+	.attr('y', dataset[0])
+	.attr("width",250)
+                .attr("height",250)
+
+d3.selectAll('#map2')
+	.append('rect')
+	.attr("fill","#C1F5C1")
+	//.append('rect')
+	.attr('x', dataset[1])
+	.attr('y', dataset[1])
+	.attr("width",200)
+                .attr("height",200)
+
+d3.selectAll('#map2')
+	.append('rect')
+	.attr("fill","#99EF99")
+	.attr('x', dataset[2])
+	.attr('y', dataset[2])
+	.attr("width",150)
+                .attr("height",150)
+
+d3.selectAll('#map2')
+	.append('rect')
+	.attr("fill","#2ADE2A")
+	.attr('x', dataset[3])
+	.attr('y', dataset[3])
+	.attr("width",100)
+                .attr("height",100)
+
+d3.selectAll('#map2')
+	.append('rect')
+	.attr("fill","#19A319")
+	.attr('x', dataset[4])
+	.attr('y', dataset[4])
+	.attr("width",50)
+                .attr("height",50)
+
+//change the clolor
+d3.select('#map2')
+	.on('mouseenter', function(event) {
+		d3.select(this)
+          		.transition()
+		.duration(500)
+		.attr('fill', 'green')
+});
+d3.selectAll('#map2')
+	.on('mouseleave', function(event) {
+		d3.select(this)
+          		.transition()
+		.duration(500)
+		.attr('fill', '#DEFADE')
+});
+
+</script>
+
+
+
+<p id="p3">
+III. These are the lines
+</p>
+
+<script>
+d3.selectAll('#p3')
+    .style('color', '#DC143C');
+</script>
+
+
+<svg id="map3" width=300 height=80>
+</svg>
+
+<script>
+var dataset = [0, 10, 300, 5];
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+0)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+0)
+	.attr("stroke", "red")
+	.attr("stroke-width", "3px");
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+5)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+5)
+	.attr("stroke", "orange")
+	.attr("stroke-width", "4px");
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+11)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+11)
+	.attr("stroke", "yellow")
+	.attr("stroke-width", "5px");
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+20)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+20)
+	.attr("stroke", "green")
+	.attr("stroke-width", "6px");
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+29)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+29)
+	.attr("stroke", "cyan")
+	.attr("stroke-width", "7px");
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+39)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+39)
+	.attr("stroke", "blue")
+	.attr("stroke-width", "8px");
+d3.select('#map3')
+	.append("line")
+	.attr("x1", dataset[0])
+	.attr("y1", dataset[3]+50)
+	.attr("x2", dataset[2])
+	.attr("y2", dataset[3]+50)
+	.attr("stroke", "purple")
+	.attr("stroke-width", "9px");
+d3.select('#map3')
+	.on('click', function(event) {
+		d3.select(this)
+          		.transition()
+		.duration(500)
+	.attr("x1", dataset[0]+20)
+	.attr("y1", dataset[3]+50)
+	.attr("x2", dataset[2]+20)
+	.attr("y2", dataset[3]+50)
+});
+
+</script>
+
+
+
+
+<p id="p4">
+IV. This is the path, it looks like a flower❀
+</br>
+Press on (not click) the blue butterfly below the flower, and it will fly to the flower.
+</p>
+
+<script>
+d3.selectAll('#p4')
+    .style('color', 'DeepPink');
+</script>
+
+
+<svg id='map4' width="200" height="155">
+
+      <path d=" M 15 10
+
+                S 15 80 65 80"
+
+                stroke="#6F0B6A" stroke-width="1.5" fill="none" />
+
+<path d=" M 65 80
+
+	S 115 80 115 10"
+
+                stroke="#AA12A3" stroke-width="2" fill="none" />
+
+<path d=" M 115 10
+
+	S 65 10 65 80"
+
+                stroke="#D816CF" stroke-width="2.5" fill="none" />
+
+<path d=" M 65 80
+
+	S 65 150 115 150"
+
+                stroke="#EB41E3" stroke-width="3" fill="none" />
+
+<path d=" M 115 150
+
+	S 155 80 65 80"
+
+                stroke="#EF63E8" stroke-width="3.5" fill="none" />
+
+<path d=" M 65 80
+
+	S -25 80 15 150"
+
+                stroke="#F49AF0" stroke-width="4" fill="none" />
+
+<path d=" M 15 150
+
+	S 65 150 65 80"
+
+                stroke="#F7B7F4" stroke-width="4.5" fill="none" />
+
+<path d=" M 65 80
+
+	S 65 10 15 10"
+
+                stroke="#FCE0FB" stroke-width="5" fill="none" />
+
+
+<style>
+    #Butterfly {
+      margin: 80px;
+      width: 20px;
+      height: 20px; 
+      border-left: 55px solid navy;
+      border-right: 55px solid navy;
+      border-bottom: 55px solid transparent;
+      border-top: 55px solid transparent;
+
+      transition: 15s;
+
+    }
+    #Butterfly:active {
+      transform: rotateY(3600deg);
+      border-left: 15px solid red;
+      border-right: 15px solid red;
+      border-bottom: 15px solid transparent;
+      border-top: 15px solid transparent;
+      margin: -15px;
+
+      width: 5px;
+      height: 5px; 
+    }
+
+  </style>
+</svg>
+
+
+
+<body>
+  <div id="Butterfly"></div>
+</body>
+
+
+
+<p id="p5">
+V. This is the WindMill, click the button to rotate it! </br>
+You can try to click the button again to make it rotate faster.
+</p>
+
+<script>
+d3.selectAll('#p5')
+    .style('color', '#266CDE');
+</script>
+
+<svg id="WindMill" width=300 height=300>
+
+<polygon points="50,50 50,150 150,150" style="fill:#C0E1F6; stroke:#C0E1F6;stroke-width:1"/>
+<polygon points="150,50 250,50 150,150" style="fill:#89C8EF; stroke:#89C8EF;stroke-width:1"/>
+<polygon points="250,250 250,150 150,150" style="fill:#4BACE7; stroke:#4BACE7;stroke-width:1"/>
+<polygon points="50,250 150,250 150,150" style="fill:#1C8DD2; stroke:#1C8DD2;stroke-width:1"/>
+
+</svg>
+
+	<button id="rotate" 
+		d3.selectAll('#WindMill')
+		onclick="startAnimation();">Click to Rotate
+	</button>
+
+	<script>
+        var WindMill;
+        function startAnimation() {
+            WindMill = document.getElementById("WindMill");
+            WindMill.currentTheta = 0;
+            setInterval("animateImage()",10);
+        }
+        function animateImage() 
+        {
+            WindMill.setAttribute("transform", "rotate(" + WindMill.currentTheta + ")");
+            WindMill.currentTheta += 1;
+        }
+    </script>
+
+
